# minesweeper_japan

./: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  setuper.cpp  setuper.h
data/: jap_kanji_n4.json  jap_kanji_n5.json
field/: field_data.cpp  field_data.h  field_view.cpp  field_view.h
minesweeper/: field_data.cpp  field_data.h  field_view.cpp  field_view.h  game_end_msgbox.cpp  game_end_msgbox.h  stat_data.cpp  stat_data.h
quiz/: data_reader.cpp  quiz.cpp  quiz.h  quiz_data.cpp  quiz_data.h
quiz/data/: jap_kanji_n5.xml
trash/: cells_model.cpp  cells_model.h
